# gstream_cmake

./: CMakeLists.txt  README.md  appsrc1.cpp  hellogst.c
